; ModuleID = '/home/carl/AnghaBench/kphp-kdb/text/extr_text-data.c_do_update_history_extended.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/text/extr_text-data.c_do_update_history_extended.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @do_update_history_extended(i32 %0, i8* %1, i64 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  store i32 %0, i32* %6, align 4
  store i8* %1, i8** %7, align 8
  store i64 %2, i64* %8, align 8
  store i32 %3, i32* %9, align 4
  %11 = load i32, i32* %9, align 4
  %12 = icmp slt i32 %11, 100
  br i1 %12, label %19, label %13

13:                                               ; preds = %4
  %14 = load i32, i32* %9, align 4
  %15 = icmp sge i32 %14, 200
  br i1 %15, label %19, label %16

16:                                               ; preds = %13
  %17 = load i8*, i8** %7, align 8
  %18 = icmp ne i8* %17, null
  br i1 %18, label %20, label %19

19:                                               ; preds = %16, %13, %4
  store i32 -1, i32* %5, align 4
  br label %43

20:                                               ; preds = %16
  %21 = load i64, i64* %8, align 8
  %22 = icmp slt i64 %21, 0
  br i1 %22, label %23, label %26

23:                                               ; preds = %20
  %24 = load i8*, i8** %7, align 8
  %25 = call i64 @strlen(i8* %24)
  store i64 %25, i64* %8, align 8
  br label %26

26:                                               ; preds = %23, %20
  %27 = load i64, i64* %8, align 8
  %28 = and i64 %27, -65536
  %29 = icmp ne i64 %28, 0
  br i1 %29, label %30, label %31

30:                                               ; preds = %26
  store i32 -1, i32* %5, align 4
  br label %43

31:                                               ; preds = %26
  %32 = load i32, i32* %6, align 4
  %33 = call i32* @get_user_f(i32 %32)
  store i32* %33, i32** %10, align 8
  %34 = load i32*, i32** %10, align 8
  %35 = icmp ne i32* %34, null
  br i1 %35, label %37, label %36

36:                                               ; preds = %31
  store i32 -1, i32* %5, align 4
  br label %43

37:                                               ; preds = %31
  %38 = load i32*, i32** %10, align 8
  %39 = load i8*, i8** %7, align 8
  %40 = load i64, i64* %8, align 8
  %41 = load i32, i32* %9, align 4
  %42 = call i32 @update_history_extended(i32* %38, i8* %39, i64 %40, i32 %41)
  store i32 1, i32* %5, align 4
  br label %43

43:                                               ; preds = %37, %36, %30, %19
  %44 = load i32, i32* %5, align 4
  ret i32 %44
}

declare dso_local i64 @strlen(i8*) #1

declare dso_local i32* @get_user_f(i32) #1

declare dso_local i32 @update_history_extended(i32*, i8*, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
